platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/exam.exams-curated-exam00-v1.fe442161.attempt.001/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/exam.exams-curated-exam00-v1.fe442161.attempt.001/submission/fix_a.c:1:2: error: #error forced failing integration submission
    1 | #error forced failing integration submission
      |  ^~~~~
